sort.basic.comb.AlgCombSort11.scala.error
Compilation error:
AlgCombSort11: error: not found: value combSort11
		combSort11();
                ^AlgCombSort11:2: error: not found: value ddef
ddef combSort11() {
^AlgCombSort11:2: error: Unit does not take parameters
ddef combSort11() {
                  ^